project("uint_to_binary")
cmake_minimum_required(VERSION 3.22)
add_executable("Uintconverter" uint_to_binary.c)
add_executable("multiply_wo" multiply_wo.c)
add_executable("comparing_wo" comparing_wo_comparing.c)
add_executable("power_check_uint" power_of_uint.c)
add_executable("linlist" linkedlist.c)